clusters/delta/production/none-town/add-init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: none-town-deployment
  namespace: production
spec:
  template:
    spec:
