clusters/delta/production/none-town/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d/init-db.js
          subPath: init-db.js
        - name: data-storage
          mountPath: /data/db  # Стандартный путь для данных MongoDB внутри контейнера
      volumes:
      - name: init-script
        secret:
          secretName: mongo-init-script
      - name: data-storage
        persistentVolumeClaim:
          claimName: mongodb-data-pvc  # Ссылаемся на заявку из первого шага
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: production
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
