clusters/delta/production/none-town/none-town-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: none-town-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n0ne.sytes.net
    secretName: n0ne-sytes-tls
  rules:
  - host: n0ne.sytes.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: none-town-service
            port:
              number: 443
